# allianceauth-corp-tools

./: .coveragerc  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENCE  MANIFEST.in  Makefile  README.md  drop_corptools_tables.sql  export.md  invTypeMaterials.csv  invTypeMaterials.csv.bz2  pyproject.toml  requirements.txt  runtests.py  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: main.yml  publish.yml
.tx/: config  transifex.yml
corptools/: .isort.cfg  __init__.py  admin.py  api.py  app_settings.py  apps.py  asset-manifest.json  auth_hooks.py  forms.py  managers.py  models.py  openapi.json  package-lock.json  package.json  providers.py  schema.py  signals.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py  webpack.config.js
corptools/api/: __init__.py  decorators.py  helpers.py  schema.py
corptools/api/character/: __init__.py  assets.py  at_a_glance.py  clones.py  finances.py  industry.py  interactions.py  list.py  mining.py  refresh.py  roles.py  skills.py  status.py  structures.py
corptools/api/core/: __init__.py  menu.py  search.py
corptools/api/corporation/: __init__.py  assets.py  at_a_glance.py  dashboards.py  finances.py  list.py  mining.py  sovereignty.py  status.py  structures.py
corptools/api/extras/: __init__.py  asset_pinger.py  clone_deaths.py  fittings.py  testing.py
corptools/audit_views/: character.py  corporation.py
corptools/cogs/: locate.py  routes.py  where.py
corptools/constants/: assets.py  tasks.py  types.py
corptools/management/commands/: corptools_import_tokens.py  ct_acl_test_bed.py  ct_fix_wallet_currency_symbol.py  ct_import_cat.py  ct_import_tokens.py  ct_import_update_prices.py  ct_purge_inactive.py  ct_sanitize_notifications.py  ct_setup.py  ct_struct_to_names.py  ct_wallet_stats.py  manual_notification_migration.py  setup_corptools_models.py  setup_models.py
corptools/migrations/: 0001_eve_sde_initial.py  0001_initial.py  0002_add_timestamp_jsonfields.py  0002_auto_20200507_1104.py  0003_auto_20200507_1115.py  0003_migrate_timestamp_data.py  0004_auto_20200507_1133.py  0004_remove_old_timestamp_fields.py  0005_auto_20200508_1506.py  0005_sovereigntyhub_sovereigntyhubreagent_and_more.py  0006_add_missing_indexes.py  0006_bpc_me_te_runs.py  0006_invtypematerials_type_id.py  0007_auto_20200510_1357.py  0007_corptoolsconfiguration_notification_retention_days_and_more.py  0008_auto_20200511_0801.py  0008_bpc_me_te_runs.py  0009_auto_20200511_0816.py  0009_corptoolsconfiguration_disable_update_mercenary_dens_and_more.py  0010_auto_20200511_0853.py  0010_updatesectionfilter.py  0011_assetsfilter_location_flags.py  0011_characterwalletjournalentry_corporationwalletdivision_corporationwalletjournalentry.py  0012_skilltotals.py  0013_eveitemdogmaattribute.py  0014_characteraudit_balance.py  0015_auto_20200614_0935.py  0016_auto_20200622_0643.py  0016_auto_20200727_0041.py  0017_auto_20200727_0041.py  0018_corporationwalletdivision_name.py  0019_implant_jumpclone.py  0020_clone.py  0021_auto_20200804_0941.py  0022_mapsystemgate_skilllist.py  0023_auto_20200810_1350.py  0024_auto_20200810_1458.py  0025_mapjumpbridge.py  0026_auto_20200811_0846.py  0027_skilllistfile.py  (+113 more)
corptools/models/: Industry.py  __init__.py  assets.py  audits.py  clones.py  contracts.py  eve_models.py  filters.py  interactions.py  mining.py  orders.py  skills.py  sovereignty.py  structures.py  utils.py  wallets.py
corptools/src/: App.js  index.js
corptools/src/apis/: Character.js
corptools/src/components/: App.js  CharActiveBadge.js  CharAssetLocSelect.js  CharHeader.js  CharMenu.js  CharacterPortrait.js  CtTable.js  PanelLoader.js
corptools/src/pages/: Asssets.js  Clones.js  Contacts.js  Notifications.js  PubData.js  Roles.js  Status.js  Wallet.js
corptools/static/corptools/: asset-manifest.json  main.js  main.js.LICENSE.txt  static
corptools/static/css/: main.8c8b27cf.chunk.css  main.8c8b27cf.chunk.css.map  style.css
corptools/static/js/: 2.5ce62d84.chunk.js  2.5ce62d84.chunk.js.map  2.bbdb6885.chunk.js  2.bbdb6885.chunk.js.map  3.19541fc7.chunk.js  3.19541fc7.chunk.js.map  (+8 more)
corptools/task_helpers/: __init__.py  char_tasks.py  corp_helpers.py  etag_helpers.py  housekeeping_tasks.py  sde_tasks.py  skill_helpers.py  update_tasks.py  wallet_export.py
corptools/tasks/: __init__.py  character.py  corporation.py  housekeeping.py  locations.py  rate_limiting.py  updates.py  utils.py
corptools/templatetags/: color.py  colors.py  fittings_skill_tree.py  helpers.py
corptools/tests/: __init__.py  test_access.py  test_access_corp.py  test_access_http.py  test_api.py  test_api_helpers.py  test_audits.py  test_blueprint_enrichment.py  test_character_orchestration.py  test_character_tasks.py  test_character_wallet_tasks.py  test_corp_utils.py  test_corporation_tasks.py  test_filters.py  test_holding_corp_perms.py  test_housekeeping_tasks.py  test_managers.py  test_models.py  test_provider.py  test_smoke.py  test_tasks.py  test_tasks_utils.py  test_templatetags.py  test_utils.py
frontend/: .gitignore  copy-assets.sh  copy-langs.sh  global.d.ts  i18next-parser.config.mjs  i18next-scanner.config.cjs  index.html  openapi.json  package-lock.json  package.json  tsconfig.json
frontend/char/: babel.config.js  copy-assets.sh  index.html  package.json  vite.config.js
frontend/corp/: copy-assets.sh  package.json
frontend/corptools/: package-lock.json  package.json  package.sh
frontend/frontend/: .gitignore  README.md  copy-assets.sh  copy-langs.sh  i18next-scanner.config.cjs  index.html  openapi.json  package.json  result.html  tsconfig.node.json  vite.config.settings.ts  vite.config.ts
frontend/locales/: en.translation.json  it_IT.translation.json
frontend/public/: index.html
frontend/routes/: package-lock.json  package.json  package.sh
frontend/shared-components/: PanelLoader.css  PanelLoader.js
frontend/src/: App.tsx  index.js
frontend/static/: index.html
tests/: celery.py  test_settings.py  test_settingsAA3.py  test_settingsAA4.py  urls.py
(+928 files in other folders)
